--- a/views/register.html
+++ b/views/register.html
@@ -3,8 +3,8 @@
         <head>
             <meta charset="utf-8">
             <title>Registro</title>
-            <link rel="stylesheet" href="./CSS/normalize.css">
-            <link rel="stylesheet" href="./CSS/register.css">
+            <link rel="stylesheet" href="./css/normalize.css">
+            <link rel="stylesheet" href="./css/register.css">
         </head>
 
 
