--- a/views/home.html
+++ b/views/home.html
@@ -6,8 +6,8 @@
             <title>Mercado Liebre</title>
 
             <!-- vinculacion a libreria de estilos-->
-            <link rel="stylesheet" href="./css/normalize.css">
-            <link rel="stylesheet" href="./css/styles.css">
+            
+            <link rel="stylesheet" href="../css/styles.css">
 
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
